[project]
name = "test-python"
version = "0.1.0"
description = "Test assignment for a Python test automation engineer using pytest"
authors = [{ name = "Pavel Simanov" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests==2.32.3"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
